[gd_scene load_steps=7 format=3 uid="uid://dgu5y5q1nkkpp"]

[ext_resource type="Script" path="res://scripts/spawn_manager.gd" id="1_3k3c7"]
[ext_resource type="PackedScene" uid="uid://b62us4y4k3pw2" path="res://scenes/game_board.tscn" id="1_w6h4d"]
[ext_resource type="PackedScene" uid="uid://bqqptpfns11b" path="res://scenes/HUD.tscn" id="3_tj8v5"]
[ext_resource type="AudioStream" uid="uid://ip4cgel68q8c" path="res://assets/merge_sound.ogg" id="4_7s4yr"]

[sub_resource type="Gradient" id="Gradient_pxmgd"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.996078, 0.886275, 0.690196, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_01c34"]
gradient = SubResource("Gradient_pxmgd")

[node name="Main" type="Node2D"]
script = ExtResource("1_3k3c7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(316.062, 411.062)
scale = Vector2(10.0957, 12.7793)
texture = SubResource("GradientTexture2D_01c34")

[node name="GameBoard" parent="." instance=ExtResource("1_w6h4d")]

[node name="Hud" parent="." instance=ExtResource("3_tj8v5")]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="MergeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7s4yr")
volume_db = -8.8

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
